# foodie

./: .gitignore  Cargo.toml  scratch.sql
foodie-core/: Cargo.toml
foodie-core/src/domain/authorization/: filtered_user.rs  token_claims.rs
foodie-core/src/domain/recipe/: mod.rs
foodie-core/src/ports/incoming/authorization/: login_command.rs  registration_command.rs  token_verification_query.rs
foodie-core/src/ports/incoming/recipe/: create_ingredient_command.rs  create_recipe_command.rs  ingredient_page_query.rs  mod.rs  recipe_page_query.rs  recipe_query.rs  update_ingredient_command.rs
foodie-core/src/ports/outgoing/authorization/: insert_user_port.rs  query_user_by_email_port.rs  query_user_port.rs
foodie-core/src/ports/outgoing/recipe/: delete_ingredient_port.rs  delete_recipe_port.rs  insert_ingredient_port.rs  insert_recipe_port.rs  mod.rs  query_ingredients_port.rs  query_recipe_port.rs  query_recipes_port.rs  update_ingredient_port.rs
foodie-core/src/services/authorization/: login_service.rs  mod.rs  registration_service.rs  service.rs  token_verification_service.rs
foodie-core/src/services/recipes/: create_ingredient_service.rs  create_recipe_service.rs  delete_ingredient_service.rs  delete_recipe_service.rs  mod.rs  query_ingredient_page_service.rs  query_recipe_page_service.rs  query_recipe_service.rs  service.rs  update_ingredient_service.rs  update_recipe_service.rs
foodie-storage/: Cargo.toml
foodie-storage/src/authorization/: user_sqlite_ds.rs
foodie-storage/src/recipes/: ingredient_sqlite_ds.rs  recipes_sqlite_ds.rs
sql/: test.db  (+2 more)
(+183 files in other folders)
