[package]
name = "foodie-storage"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.74"
serde = { version = "1.0.190", features = ["derive"] }
sqlx = { version = "0.7.2", features = ["runtime-tokio-rustls", "sqlite"] }
tracing = "0.1.40"
foodie-core = { path = "../foodie-core" }
uuid = "1.5.0"
